fixed some padding related errors and wrong positioning, the landing is now ideal!

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 * {
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
     font-family: sans-serif;
 }
 
@@ -39,7 +38,7 @@ header a {
     flex-flow: row nowrap;
     align-items: center;
     justify-content: space-evenly;
-    padding: 10px;
+    padding: 25px 0 25px 0;
 }
 
 #hero-text {
@@ -162,7 +161,7 @@ header a {
     flex-flow: row nowrap;
     align-items: center;
     justify-content: center;
-    padding: 50px;
+    padding: 50px 0 50px 0;
 }
 
 #call p {
